[package]
name = "rogue"
version = "0.1.0"
authors = ["Knarkzel", "Staven"]
edition = "2018"

[[bin]]
name = "rogue"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
embedded-graphics = "0.7"

[dependencies.ogc-rs]
git = "https://github.com/knarkzel/ogc-rs"
features = ["ffi"]
